change style add bitmoji button

--- a/mapComponent/map.page.html
+++ b/mapComponent/map.page.html
@@ -1,22 +1,27 @@
+<app-top-toolbar></app-top-toolbar>
+
 <ion-header>
   <ion-toolbar class="kickBg">
-    <ion-title class="icon whiteSmoke">KickMap</ion-title>
+    <ion-title class="icon whiteSmoke">Carte Kick</ion-title>
     <ion-buttons slot="end">
-      <ion-menu-button class="lightKick" autoHide='false'>
+      <ion-button disabled="false" class="lightKick" autoHide='false' (click)="presentPopover($event)">
         <ion-icon class="settingBtn" name="settings"></ion-icon>
-      </ion-menu-button>
+      </ion-button>
     </ion-buttons>
     <ion-buttons slot="start">
-      <ion-button routerLink="/dashboard" class="lightKick" autoHide='false'>
-        <ion-icon class="settingBtn" name="ios-arrow-back"></ion-icon>
-      </ion-button>
+      <ion-back-button defaultHref="/dashboard" color="light" autoHide='false' text="" icon="ios-arrow-back"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<app-top-toolbar></app-top-toolbar>
-
 <ion-content class="noScroll">
   <div class="map match-parent" id="map"></div>
+  <ion-toolbar class="kickBg toolbarTest">
+    <ion-title>
+      <ion-button fill="clear">
+        <ion-icon class="menuIcon" color="light" name="ios-arrow-up"></ion-icon>
+      </ion-button>
+    </ion-title>
+  </ion-toolbar>
   <app-nav-bar></app-nav-bar>
 </ion-content>
